charts/fleet/old/fleet.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleet-svc
  annotations:
    cloud.google.com/neg: '{"exposed_ports": {"8080":{"name": "neg-fleet-8080"}}}'
    cloud.google.com/neg: '{"ingress": true}'
    # networking.gke.io/load-balancer-type: "Internal"
spec:
  type: ClusterIP
  selector:
    app: fleet
  ports:
  - name: tcp-port
    protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 0
