charts/fleet/old/fleet.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fleet
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: managed-cert
    networking.gke.io/v1beta1.FrontendConfig: fleet-frontend-config
spec:
  defaultBackend:
    service:
      name: fleet
      port:
        number: 8080
  rules:
    - host: fleet.dev.asy.azuresucks.de
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: fleet
                port:
                  number: 8080
